dev: reorganize tests
Use only junit5.
Get rid of JerseyTest and test things directly.
Configure surefire plugin.
